--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -4,5 +4,5 @@ services:
     runtime: python
     plan: free
     autoDeploy: false
-    buildCommand: pip install -r Pipfile
+    buildCommand: pip install Pipfile
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
